<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity">

    <TextView
        android:id="@+id/textViewCreateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/nameAskLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNameIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/TaskNameLabel"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCreateName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCreateName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/setDateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameIn" />

    <TextView
        android:id="@+id/textViewCreateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/dateAskLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSetDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonSetDate" />

    <TextView
        android:id="@+id/textViewDateCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSetDate"
        app:layout_constraintEnd_toStartOf="@+id/buttonSetDate"
        app:layout_constraintStart_toEndOf="@+id/textViewCreateDate"
        app:layout_constraintTop_toTopOf="@+id/buttonSetDate" />

    <TextView
        android:id="@+id/textViewPriorityCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/priorityAskLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetDate" />

    <RadioGroup
        android:id="@+id/radioGrpPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:checkedButton="@id/radioButtonHigh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewPriorityCreate"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriorityCreate">

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highLabel" />

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediumLabel" />

        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lowLabel" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonCancelCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/cancelLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpPriority" />

    <Button
        android:id="@+id/buttonSubmitCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/createLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpPriority" />

</androidx.constraintlayout.widget.ConstraintLayout>