<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewNumTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="You have 0 tasks"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewTask"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewNumTask">

        <TextView
            android:id="@+id/textViewUpcomingTask"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/upcomingTasks"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTaskDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskName"
            android:textSize="18sp"
            android:translationY="50dp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DateOutput"
            android:textSize="16sp"
            android:translationY="80dp" />

        <TextView
            android:id="@+id/textViewPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:translationX="250dp"
            android:translationY="80dp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonViewTasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/ViewTaskButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardViewTask" />

    <Button
        android:id="@+id/buttonCreateTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/createTaskButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewTasks" />

</androidx.constraintlayout.widget.ConstraintLayout>